--- a/Questions/templates/question_papers/questions/update_questions_list.html
+++ b/Questions/templates/question_papers/questions/update_questions_list.html
@@ -65,6 +65,7 @@
 
                             <div class="col-12 text-center">
                                 <button type="submit" class="btn btn-primary">Save Question</button>
+                                <a href="{% url "detail-question-paper-view" question_paper.id  %}" class="btn btn-secondary">Back</a>
                             </div>
                                                         
                         </form>
