--- a/Questions/templates/question_papers/detail_question_paper.html
+++ b/Questions/templates/question_papers/detail_question_paper.html
@@ -19,9 +19,7 @@
 
 
     <section class="section">
-
         <div class="row justify-content-between">
-
             <div class="col-12">
 
                 <div class="card border border-dark shadow">
@@ -31,39 +29,22 @@
                         <p class="card-text text-center mb-0 pb-0 pt-2">{{request.user.institute}}</p>
                         <p class="card-text text-center mb-0 pb-0">Department of {{request.user.profile.department}}</p>
                         <h5 class="card-title text-center text-dark pt-2">{{question_paper.question_paper_title}} <span class="fw-normal fs-6 text-dark">(Academic Year {{question_paper.academic_year_start}} - {{question_paper.academic_year_end}})</span></h5>
-
-                        <div class="row justify-content-between">
-                            <div class="col">
-                                <div class="row">
-                                    <p class="text-dark fw-bold mb-0">Course Title: {{question_paper.question_paper_subject.subject_name}}</p>
-                                    <p class="text-dark fw-bold mb-0">Course Code: {{question_paper.question_paper_subject.subject_code}}</p>
-                                    <p class="text-dark fw-bold">Course Title: {{question_paper.question_paper_subject.semester}}</p>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="row text-end">
-                                    <p class="text-dark fw-bold mb-0">Total Marks: {{question_paper.question_paper_total_marks}}</p>
-                                    {% if question_paper.exam_date %}
-                                    <p class="text-dark fw-bold mb-0">Date: {{question_paper.exam_date}}</p>
-                                    <p class="text-dark fw-bold">Time: {{question_paper.exam_time}}</p>
-                                    {% endif %}
-                                </div>
-                            </div>
-                            
-                        </div>
-
                         <hr>
 
-                        <p><span class="badge mb-3 p-2 text-bg-{% if question_paper.status == 'Complete' %}success{% else %}warning{% endif %}">{{question_paper.status|upper}}</span></p>
+                        <div>
+                            <span class="badge mb-3 p-2 text-bg-{% if question_paper.status == 'Complete' %}success{% else %}warning{% endif %}">
+                                {{question_paper.status|upper}}
+                            </span>
+                        </div>
 
-                        {% for division in question_paper.divisions.all %}
-                        
+                        {% for division in question_paper.divisions.all %}       
                             <div class="row justify-content-center mb-3">
-
-                                <div class="col-10 border pt-2">
+                                <div class="col-10 border pt-2 pb-4">
 
                                     <div class="d-flex justify-content-between align-items-center">
-                                        <span class="badge p-2 text-bg-{% if division.status == 'Complete' %}success{% else %}warning{% endif %}">{{division.status|upper}}</span>
+                                        <span class="badge p-2 text-bg-{% if division.status == 'Complete' %}success{% else %}warning{% endif %}">
+                                            {{division.status|upper}}
+                                        </span>
                                         <a href="{% url "update-questions-list-view" division.id question_paper.id %}" class="btn btn-secondary">
                                             <i class="bi bi-pencil-square"></i>
                                         </a>
@@ -79,36 +60,25 @@
                                             <p class="card-text mb-0 pb-0 pt-2">{{forloop.counter}}. {{question.question_title}}</p>
                                         {% endfor %}
                                     {% else %}
-                                        <p class="card-text text-danger">No Questions Selected</p>
+                                        <p class="card-text text-danger mb-0 pb-0 pt-2">No Questions Selected</p>
                                     {% endif %}
                                     
                                 </div>
-
                             </div>
-                        
                         {% endfor %}    
 
                         <a href="{% url "create-division-view" question_paper.id %}" class="">
-                            <i class="bi bi-plus-square-fill fs-5"></i>
+                            <i class="bi bi-plus-square-fill fs-5 mt-3"></i>
                             Add Question
                         </a>
 
-
                    </div>
                     
-                    
-
-
-
                 </div>
 
             </div>
-
         </div>
-
-
     </section>
-
 
 </main>
 
