--- a/Questions/templates/question_papers/questions/add_questions.html
+++ b/Questions/templates/question_papers/questions/add_questions.html
@@ -93,7 +93,7 @@
 
                                 <div class=" col-12 text-center">
                                     <button type="submit" class="btn btn-primary">Save Question(s)</button>
-                                    <a href="{% url "list-question-sets-view" %}" class="btn btn-secondary">Close</a>
+                                    <a href="{% url "detail-question-paper-view" question_paper.id %}" class="btn btn-secondary">Close</a>
                                 </div>
                             </form>
 
