All Index Pages Completed

--- a/Users/templates/members/admin/index.html
+++ b/Users/templates/members/admin/index.html
@@ -5,5 +5,123 @@
 {% block main %}
     <main id="main" class="main">
         {% include "components/alert.html" %}
+
+        <div class="pagetitle">
+            <h1>Dashboard</h1>
+        </div>
+
+        <section class="section dashboard">
+            <div class="row justify-content-between">
+
+                <div class="col-12">
+                    <div class="row">
+
+                        <div class="col-6">
+                            <div class="card info-card sales-card">      
+                                <div class="card-body">
+        
+                                    <h5 class="card-title">Total Users</h5>
+        
+                                    <div class="d-flex align-items-center">
+                                        <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                            <i class="bi bi-person"></i>
+                                        </div>
+                                        <div class="ps-3">
+                                            <h6>{{total_users}}</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-6">
+                            <div class="card info-card customers-card">      
+                                <div class="card-body">
+        
+                                    <h5 class="card-title">Total HODS</h5>
+        
+                                    <div class="d-flex align-items-center">
+                                        <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                            <i class="bi bi-person"></i>
+                                        </div>
+                                        <div class="ps-3">
+                                            <h6>{{hods}}</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12">
+                            <div class="card">
+                    
+                                <div class="card-body pb-0">
+                                    <h5 class="card-title">Different Users</h5>
+                        
+                                    <div id="trafficChart" style="min-height: 400px;" class="echart"></div>
+                        
+                                    <script>
+                                            document.addEventListener("DOMContentLoaded", () => {
+                                                
+                                                echarts.init(document.querySelector("#trafficChart")).setOption({
+                                                    tooltip: {
+                                                        trigger: 'item'
+                                                    },
+        
+                                                    legend: {
+                                                        top: '5%',
+                                                        left: 'center'
+                                                    },
+                                                    series: [{
+                                                        name: 'Count',
+                                                        type: 'pie',
+                                                        radius: ['40%', '70%'],
+                                                        avoidLabelOverlap: false,
+                                                    label: {
+                                                        show: false,
+                                                        position: 'center'
+                                                    },
+                                                    emphasis: {
+                                                        label: {
+                                                        show: true,
+                                                        fontSize: '18',
+                                                        fontWeight: 'bold'
+                                                        }
+                                                    },
+                                                    labelLine: {
+                                                        show: false
+                                                    },
+                                                    data: [{
+                                                        value: {{ admins }},
+                                                        name: 'Admin'
+                                                        },
+                                                        {
+                                                        value: {{ hods }},
+                                                        name: 'HOD'
+                                                        },
+                                                        {
+                                                        value: {{ teachers }},
+                                                        name: 'Teacher'
+                                                        },
+                                                        {
+                                                        value: {{ students }},
+                                                        name: 'Student'
+                                                        }
+                                                    ]
+                                                    }]
+                                                });
+                                            });
+                                    </script>
+                                </div>
+        
+                            </div>
+                        </div> 
+
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
     </main>
 {% endblock main %}
