--- a/Users/templates/users/base_site.html
+++ b/Users/templates/users/base_site.html
@@ -64,12 +64,34 @@
                             </a>
                         </li>
                     {% else %}
-                        <li class="nav-item">
-                            <a href="{% url "logout-view" %}" class="nav-link">
-                                <i class="bi bi-power"></i> 
-                                Logout
-                            </a>
-                        </li>
+                    <li class="nav-item dropstart">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            {{request.user.first_name}} {{request.user.last_name.0}}
+                        </a>
+
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="{% url "index-view" %}">
+                                    <i class="bi bi-house"></i>
+                                    Home
+                                </a>
+                            </li>
+
+                            <li>
+                                <a class="dropdown-item" href="{% url "about-us-view" %}">
+                                    <i class="bi bi-info-circle-fill"></i>
+                                    About Us
+                                </a>
+                            </li>
+
+                            <li>
+                                <a class="dropdown-item" href="{% url 'logout-view' %}">
+                                    <i class="bi bi-power"></i>
+                                    Logout
+                                </a>
+                            </li>
+                        </ul>
+                    </li> 
                     {% endif %}
                 </ul>
             </div>
